// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: can create branches 1`] = `
<div
  className="app-branches-console"
>
  <div
    className="boxed-group-actions"
  >
    <Button
      disabled={false}
      onClick={[Function]}
    >
      application_console.branches.create
    </Button>
  </div>
  <h2
    className="text-limited big-spacer-top"
    title="application_console.branches"
  >
    application_console.branches
  </h2>
  <p>
    application_console.branches.help
  </p>
  <div
    className="app-branches-list"
  >
    <table
      className="data zebra"
    >
      <tbody>
        <ApplicationProjectBranch
          application={
            Object {
              "branches": Array [
                Object {
                  "analysisDate": "2018-01-01",
                  "excludedFromPurge": true,
                  "isMain": false,
                  "name": "branch-6.7",
                },
              ],
              "key": "foo",
              "name": "Foo",
              "projects": Array [
                Object {
                  "branch": "master",
                  "enabled": true,
                  "isMain": true,
                  "key": "bar",
                  "name": "Bar",
                },
              ],
              "visibility": "private",
            }
          }
          branch={
            Object {
              "analysisDate": "2018-01-01",
              "excludedFromPurge": true,
              "isMain": false,
              "name": "branch-6.7",
            }
          }
          key="branch-6.7"
          onUpdateBranches={[MockFunction]}
        />
      </tbody>
    </table>
  </div>
</div>
`;

exports[`should render correctly: creating branch 1`] = `
<div
  className="app-branches-console"
>
  <div
    className="boxed-group-actions"
  >
    <Button
      disabled={true}
      onClick={[Function]}
    >
      application_console.branches.create
    </Button>
  </div>
  <h2
    className="text-limited big-spacer-top"
    title="application_console.branches"
  >
    application_console.branches
  </h2>
  <p>
    application_console.branches.help
  </p>
  <div
    className="app-branches-list"
  >
    <p
      className="text-center big-spacer-top"
    >
      application_console.branches.no_branches
    </p>
  </div>
  <CreateBranchForm
    application={
      Object {
        "branches": Array [
          Object {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": false,
            "name": "branch-6.7",
          },
        ],
        "key": "foo",
        "name": "Foo",
        "projects": Array [
          Object {
            "branch": "master",
            "isMain": true,
            "key": "bar",
            "name": "Bar",
          },
        ],
        "visibility": "private",
      }
    }
    enabledProjectsKey={
      Array [
        "bar",
      ]
    }
    onClose={[Function]}
    onCreate={[Function]}
  />
</div>
`;

exports[`should render correctly: default 1`] = `
<div
  className="app-branches-console"
>
  <div
    className="boxed-group-actions"
  >
    <Button
      disabled={true}
      onClick={[Function]}
    >
      application_console.branches.create
    </Button>
  </div>
  <h2
    className="text-limited big-spacer-top"
    title="application_console.branches"
  >
    application_console.branches
  </h2>
  <p>
    application_console.branches.help
  </p>
  <div
    className="app-branches-list"
  >
    <p
      className="text-center big-spacer-top"
    >
      application_console.branches.no_branches
    </p>
  </div>
</div>
`;
